--- a/contato.html
+++ b/contato.html
@@ -23,6 +23,7 @@
                 <p>Nome da CEO: Isabela Matos Carazatto</p>
                 <p>Email da CEO: matosisa582@gmail.com</p>
                 <p>Telefone da CEO: (14)91005-1130</p>
+                <p>Endereço da CEO: Rua Antonio Filipi // Número 22 // Parque dos Ipês</p>
             </section>
 
             <img src="img/sl4.jpg" width="897"><br>
