--- a/produtos.html
+++ b/produtos.html
@@ -43,9 +43,9 @@
             <source src="midia/ajuste dawn.mp4" type="video/mp4">
         </video>
 
-        <audio preload="metadata" autoplay loop>
-            <source src="midia/Lofi Song.mp3" type="audio/mp3">
-            <a href="midia/Lofi Song.mp3" download="midia/Lofi Song" type="audio.mp3"></a>
+        <audio preload="metadata" controls autoplay loop>
+            <source src="midia/juliet.mp3" type="audio/mp3">
+            <a href="midia/juliet.mp3" download="midia/juliet.mp3" type="audio.mp3"></a>
         </audio>
     </section>
     </main>
